@@ -1,3 +1,8 @@
+2010-01-15  Edard Nevill <ed@camswl.com>
+
+        * ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
+	Implement is_allocatable to make build word with hs16
+
 2010-01-15  Xerxes Rånby  <xerxes@zafena.se>
 
 	PR icedtea/428:
